docs: 文档主题修复

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "allowJs": true,
-    "strict": true,
+    "strict": false,
     "jsx": "preserve",
     "sourceMap": true,
     "lib": ["ESNext", "DOM"],
