--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@release-it/conventional-changelog": "^5.0.0",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^17.0.25",
+    "@vue/reactivity": "^3.2.36",
     "c8": "^7.11.3",
     "eslint": "^8.13.0",
     "eslint-config-jaskang": "^0.1.3",
