--- a/docs/package.json
+++ b/docs/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vitepress dev",
     "build": "vitepress build",
-    "serve": "vitepress serve"
+    "serve": "vitepress serve --port 8080"
   },
   "dependencies": {
     "@jaskang/theme": "^2.0.9",
