--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "url": "https://github.com/JasKang/rubic/issues"
   },
   "scripts": {
-    "docs:dev": "pnpm --filter docs run dev",
+    "start": "pnpm --filter docs run dev",
     "docs:build": "pnpm --filter docs run build",
     "docs:serve": "pnpm --filter docs run serve",
     "build": "tsup && npm run build:miniprogram",
