--- a/package.json
+++ b/package.json
@@ -35,30 +35,32 @@
     "test": "vitest",
     "test-dts": "tsc -p ./tests-dts/tsconfig.json",
     "coverage": "vitest --coverage",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "deps": "taze"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.24.1",
-    "@release-it/conventional-changelog": "^5.0.0",
+    "@microsoft/api-extractor": "^7.30.0",
+    "@release-it/conventional-changelog": "^5.1.0",
     "@types/fs-extra": "^9.0.13",
-    "@types/node": "^17.0.25",
-    "@vue/reactivity": "^3.2.36",
-    "c8": "^7.11.3",
-    "eslint": "^8.13.0",
+    "@types/node": "^18.7.14",
+    "@vue/reactivity": "^3.2.38",
+    "c8": "^7.12.0",
+    "eslint": "^8.23.0",
     "eslint-config-jaskang": "^0.1.3",
     "fs-extra": "^10.1.0",
     "j-component": "^1.4.6",
-    "jsdom": "^19.0.0",
-    "lint-staged": "^12.3.8",
+    "jsdom": "^20.0.0",
+    "lint-staged": "^13.0.3",
     "minimist": "^1.2.6",
-    "miniprogram-api-typings": "^3.4.6",
+    "miniprogram-api-typings": "^3.5.0",
     "picocolors": "^1.0.0",
-    "prettier": "^2.6.2",
-    "release-it": "^15.0.0",
-    "simple-git-hooks": "^2.7.0",
-    "tsup": "^5.12.8",
-    "typescript": "^4.6.3",
-    "vitest": "^0.12.6"
+    "prettier": "^2.7.1",
+    "release-it": "^15.4.1",
+    "simple-git-hooks": "^2.8.0",
+    "taze": "^0.8.0",
+    "tsup": "^6.2.3",
+    "typescript": "^4.8.2",
+    "vitest": "^0.23.0"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
