--- a/package.json
+++ b/package.json
@@ -6,10 +6,6 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "miniprogram": "dist/miniprogram",
-  "workspaces": [
-    "packages/*",
-    "docs"
-  ],
   "author": "jaskang",
   "license": "MIT",
   "homepage": "https://github.com/JasKang/rubic#readme",
@@ -48,11 +44,11 @@
     "eslint": "^8.23.0",
     "eslint-config-jaskang": "^0.1.3",
     "fs-extra": "^10.1.0",
-    "j-component": "^1.4.6",
     "jsdom": "^20.0.0",
     "lint-staged": "^13.0.3",
     "minimist": "^1.2.6",
     "miniprogram-api-typings": "^3.5.0",
+    "miniprogram-test-util": "^0.0.5",
     "picocolors": "^1.0.0",
     "prettier": "^2.7.1",
     "release-it": "^15.4.1",
