--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "@release-it/conventional-changelog": "^5.1.0",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^18.7.14",
+    "@vitest/coverage-c8": "^0.23.1",
     "@vue/reactivity": "^3.2.38",
     "c8": "^7.12.0",
     "eslint": "^8.23.0",
     "eslint-config-jaskang": "^0.1.3",
     "fs-extra": "^10.1.0",
+    "happy-dom": "^6.0.4",
     "minimist": "^1.2.6",
     "miniprogram-api-typings": "^3.5.0",
     "miniprogram-test-util": "^0.0.9",
