--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "test": "vitest",
     "test-dts": "tsc -p ./tests-dts/tsconfig.json",
     "coverage": "vitest --coverage",
-    "lint": "eslint .",
-    "deps": "taze"
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.30.0",
@@ -53,7 +52,6 @@
     "picocolors": "^1.0.0",
     "prettier": "^2.7.1",
     "release-it": "^15.4.1",
-    "taze": "^0.8.0",
     "tsup": "^6.2.3",
     "typescript": "^4.8.2",
     "vitepress": "1.0.0-alpha.13",
