--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "release-it": "^15.4.1",
     "tsup": "^6.2.3",
     "typescript": "^4.8.2",
+    "vite": "^3.1.3",
     "vitepress": "1.0.0-alpha.13",
     "vitest": "^0.23.0",
     "vue": "^3.2.38"
