--- a/package.json
+++ b/package.json
@@ -35,27 +35,26 @@
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@release-it/conventional-changelog": "^5.1.0",
+    "@release-it/conventional-changelog": "^5.1.1",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^18.7.14",
-    "@vitest/coverage-c8": "^0.23.1",
-    "@vue/reactivity": "^3.2.38",
+    "@vitest/coverage-c8": "^0.25.7",
+    "@vue/reactivity": "^3.2.45",
     "c8": "^7.12.0",
-    "eslint": "^8.23.0",
-    "eslint-config-jaskang": "^0.1.3",
+    "eslint": "^8.29.0",
     "fs-extra": "^10.1.0",
-    "happy-dom": "^6.0.4",
+    "happy-dom": "^8.1.0",
     "miniprogram-api-typings": "^3.6.0",
     "miniprogram-test-util": "^0.0.9",
     "picocolors": "^1.0.0",
-    "prettier": "^2.7.1",
-    "release-it": "^15.4.1",
-    "tsup": "^6.2.3",
-    "typescript": "^4.8.2",
-    "vite": "^3.1.3",
-    "vitepress": "1.0.0-alpha.13",
-    "vitest": "^0.23.0",
-    "vue": "^3.2.38"
+    "prettier": "^2.8.1",
+    "release-it": "^15.5.1",
+    "tsup": "^6.5.0",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.0",
+    "vitepress": "1.0.0-alpha.31",
+    "vitest": "^0.25.7",
+    "vue": "^3.2.45"
   },
   "pnpm": {
     "peerDependencyRules": {
@@ -68,5 +67,9 @@
       ]
     }
   },
-  "packageManager": "pnpm@6.24.4"
+  "packageManager": "pnpm@6.24.4",
+  "dependencies": {
+    "@jaskang/config": "^0.0.7",
+    "@jaskang/eslint-config": "^0.0.7"
+  }
 }
