--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "vite": "^4.0.0",
     "vitepress": "1.0.0-alpha.31",
     "vitest": "^0.25.7",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "@jaskang/config": "^0.0.7",
+    "@jaskang/eslint-config": "^0.0.7"
   },
   "pnpm": {
     "peerDependencyRules": {
@@ -67,10 +69,5 @@
       ]
     }
   },
-  "packageManager": "pnpm@6.24.4",
-  "dependencies": {
-    "@jaskang/config": "^0.0.7",
-    "@jaskang/eslint-config": "^0.0.7",
-    "deep-diff": "^1.0.2"
-  }
+  "packageManager": "pnpm@6.24.4"
 }
