--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "lint": "eslint ."
   },
   "devDependencies": {
+    "@jaskang/config": "^0.0.7",
+    "@jaskang/eslint-config": "^0.0.7",
     "@release-it/conventional-changelog": "^5.1.1",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^18.7.14",
@@ -57,9 +59,7 @@
     "vite": "^4.0.0",
     "vitepress": "1.0.0-alpha.31",
     "vitest": "^0.25.7",
-    "vue": "^3.2.45",
-    "@jaskang/config": "^0.0.7",
-    "@jaskang/eslint-config": "^0.0.7"
+    "vue": "^3.2.45"
   },
   "pnpm": {
     "peerDependencyRules": {
