--- a/package.json
+++ b/package.json
@@ -25,22 +25,23 @@
   },
   "scripts": {
     "dev": "pnpm docs:dev",
-    "build": "tsup && npm run build:miniprogram",
+    "build": "tsup && pnpm build:miniprogram",
     "build:miniprogram": "node scripts/mpBuild.js",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:serve": "vitepress serve docs",
-    "release": "release-it",
-    "release:beta": "release-it --preRelease=beta",
+    "change": "pnpm changeset",
+    "release": "pnpm build && changeset publish",
     "test": "vitest run",
     "test-dts": "tsc -p ./tests-dts/tsconfig.json",
     "coverage": "vitest --coverage",
     "lint": "eslint ."
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.4.8",
+    "@changesets/cli": "^2.26.1",
     "@jaskang/config": "^1.0.0",
     "@jaskang/eslint-config": "^0.0.7",
-    "@release-it/conventional-changelog": "^5.1.1",
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^18.15.11",
     "@vitest/coverage-c8": "^0.30.1",
@@ -53,7 +54,6 @@
     "miniprogram-test-util": "^0.0.9",
     "picocolors": "^1.0.0",
     "prettier": "^2.8.7",
-    "release-it": "^15.10.1",
     "tsup": "^6.7.0",
     "typescript": "^5.0.4",
     "vite": "^4.2.2",
